--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -19,7 +19,9 @@ jobs:
     if: "!startsWith(github.event.head_commit.message, 'Update static content')"
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false
       - uses: actions/setup-node@v1
         with:
           node-version: '16.x'
